--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: | 
           mvn -B --update-snapshots package -P packageAsDocker
           docker build ./docker -f ./docker/Dockerfile -t ghcr.io/${{ github.repository_owner }}/user-example:v0.0.1
-          docker push ghcr.io/${{ github.repository_owner }}/user-example:v0.0.1
+          docker push ghcr.io/${{ github.actor }}/user-example:v0.0.1
           
       - name: "Upload docker-compose to Azure"
         uses: wlixcc/SFTP-Deploy-Action@v1.0
@@ -48,4 +48,4 @@ jobs:
           port: 22
           script: |
             docker stop $(docker ps -a -q)
-            USER_CONTAINER=ghcr.io/${{ github.repository_owner }}/user-example:v0.0.1 docker-compose -f /tmp/docker-compose.yml up -d
+            USER_CONTAINER=ghcr.io/${{ github.actor }}/user-example:v0.0.1 docker-compose -f /tmp/docker-compose.yml up -d
