--- a/experimental/user-project/user-example/docker/docker-compose.yml
+++ b/experimental/user-project/user-example/docker/docker-compose.yml
@@ -1,5 +1,16 @@
 version: "3.9"
 services:
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    volumes:
+      - /etc/devops/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/:/etc/letsencrypt
+    ports:
+      - 80:80
+      - 443:443
+      
   user-example:
     image: ${USER_CONTAINER}
     ports:
