--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -9,6 +9,12 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       
+      - name: Checkout
+        uses: actions/checkout@v2.4.0
+        
+      - name: Show dispatch payload
+        run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
+        
       - name: "Upload docker-compose to Azure"
         uses: wlixcc/SFTP-Deploy-Action@v1.0
         with:
