--- a/experimental/user-project/user-example/docker/docker-compose.yml
+++ b/experimental/user-project/user-example/docker/docker-compose.yml
@@ -2,13 +2,15 @@ version: "3.9"
 services:
 
   nginx:
-    image: nginx:latest
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
     container_name: nginx_proxy
     volumes:
       - /etc/devops/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/:/etc/letsencrypt
     ports:
       - 80:80
+      - 81:81
       - 443:443
       
   user-example:
