--- a/experimental/user-project/user-example/docker/docker-compose.yml
+++ b/experimental/user-project/user-example/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
 
-  app:
+  proxy:
     image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
     ports:
